# poker_frontend

./: CMakeLists.txt  Main.qml  functions.js  main.cpp  resources.qrc
additional/: ChooseGame.qml  MainMenu.qml
components/: CentralColumn.qml  HeaderRectangle.qml  InfoColumn.qml  MidRectangle.qml  StandartRectangle.qml
js/: functions.js  getServerData.js  main.js  updateTimers.js
views/: GameView.qml  StartView.qml
